syntax="proto3";

package stickerm;

// -- GO package options --
option go_package = "github.com/eddieogola/stickerm/server/productservice/genproto";

// -- Product Service --
service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
    rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    string image_url = 4;
}

message CreateProductResponse {
    Product product = 1;
}

message GetProductsRequest {}

message GetProductsResponse {
    repeated Product products = 1;
}

message GetProductByIdRequest {
    string id = 1;
}

message GetProductByIdResponse {
    Product product = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message UpdateProductResponse {
    Product product = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    bool success = 1;
}